kubernetes/apps/ai/toolhive/config/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-ops-workbench
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - toolhive.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-home-ops-workbench
          port: 4483
      matches:
        - path:
            type: PathPrefix
            value: /mcp
